--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -28,9 +28,13 @@
 
 		<main>
 			<h2>Posts</h2>
+
+			{% if user.is_authenticated %}
 			<p class="post-actions">
 				<a class="link-button" href="/post/create/">Create new post</a>
 			</p>
+			{% endif %}
+
 			<div id="blog-wrapper">
 				{% for post in posts %}
 				<a href="/post/{{ post.id}}/">
