--- a/blog/static/index.css
+++ b/blog/static/index.css
@@ -104,12 +104,15 @@ main {
 form > input,
 textarea {
 	width: 100%;
-	max-width: 100%;
-	min-width: 100%;
 	padding: 0.5rem;
 	margin-bottom: 1rem;
 	border-radius: 0.5rem;
 	border: 1px solid var(--primary);
+}
+
+form > textarea {
+	resize: vertical;
+	height: 40vh;
 }
 
 form > label {
