--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -54,6 +54,18 @@
 					</div>
 					<div class="post-content">{{ post.content }}</div>
 				</div>
+				<div class="comments">
+					{% for comment in post.comments.all %}
+					<div class="comment-item">
+						<div class="comment-header">
+							<h3>
+								{{ comment.author }} - {{ comment.created_at }}
+							</h3>
+						</div>
+						<div class="comment-content">{{ comment.content }}</div>
+					</div>
+					{% endfor %}
+				</div>
 			</div>
 		</main>
 
